--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="byrja"
         android:text="@string/button_byrja"
-        android:textColor="@color/colorAccent"
+        android:textColor="@android:color/holo_orange_dark"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
