--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -64,15 +64,16 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
-        android:alpha="0.6"
+        android:alpha="1.0"
         android:contentDescription="@string/skograektin_logo"
         android:cropToPadding="false"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        app:srcCompat="@drawable/skograektin_vertical" />
+        app:layout_constraintWidth_percent="0.9"
+        app:srcCompat="@drawable/planting" />
 
     <Button
         android:id="@+id/button"
